website/i18n/nl/docusaurus-plugin-content-docs-dataplatform/version-4.0.0/dataplatform_DATASETS_SortFilteringDataset.md
---
id: datasets_SortFilterDatasets
title: Datassets sorteren en filteren 
sidebar_label: Datassets sorteren en filteren 
---

Datassets sorteren en filteren 

> De lijst met datasets wordt dynamisch gewijzigd door het criterea dat door de filters wordt gedicteerds

U kunt op de volgende manieren sorteren:

<!-- ![imageStyle: sorting dropdown](assets/SortingDatasets/dataplatform_user_FilteringDataset_sort.png) -->

| Name | Uitleg  |
| :---- | :----------- |
| Relevantie | Eerste: score / tweede: laatst gewijzigd  |
| Naam oplopend  | Nummer gevolgd door A-Z, op basis van titel |
| Naam aflopend| Z-A gevolgd door nummer, gebaseerd op tite |
| Score oplopend | Datasets beoordeeld op best gesorteerd op top  |
| Score aflopend  | Niet-beoordeelde datasets gesorteerd naar boven  |
| Laatst gewijzigd | Meest recente wijzigingen in metadata  |
| Populair  | Hoogste beoordeling en weergaven bovenaan  |



## Gegevenssets filteren 
Het filteren van datasets kan op verschillende manieren worden bereikt, met behulp van enkele of meerdere filters. Filteropties worden weergegeven aan de linkerkant van de overzichtspagina van de gegevensset in CKAN. 

<!-- ![imageStyle: filter tree - PURPOSELY BROKEN FOR DEMO](assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_filtering.png) -->

Het is mogelijk om resultaten te filteren op basis van: 
* Organisaties 
* Groepen 
* Tags 
* Bestandsformaat 
* Licenties 


### Gegevenssets filteren op meerdere items
Filteren kan worden bereikt door het gebruik van meer dan één filter. 

<img class="imageStyle" alt="image: Filtering Datasets"   src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_multiple.png').default} />


### Filters verwijderen 
Filters kunnen één voor één uit een zoekopdracht worden verwijderd door op het kruisje achter het geselecteerde filter te klikken. 

U kunt filters verwijderen aan de linkerkant van de pagina, in het filtergebied of boven aan de pagina.

<img class="imageStyle" alt="image: Remove Filters" src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_remove.png').default} />


### Fitlering datasets op de groeps-/themapagina
Het selecteren van een groep heeft hetzelfde gedrag als filteren in het scherm met de gegevenssetlijst. 

<img class="imageStyle" alt="image: Filtering by groups" src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_groupsthemespage.png').default} />


