website/i18n/nl/docusaurus-plugin-content-docs-dataplatform/version-4.1.0/dataplatform_DATASETS_SortFilteringDataset.md
---
id: datasets_SortFilterDatasets
title: Sorteren en filteren
sidebar_label: Sorteren en filteren
---

Datassets sorteren en filteren

> De lijst met datasets wordt dynamisch gewijzigd door middel van filtering

Je kunt op de volgende manieren sorteren:

<!-- ![imageStyle: sorting dropdown](assets/SortingDatasets/dataplatform_user_FilteringDataset_sort.png) -->

| Name             | Uitleg                                          |
| :--------------- | :---------------------------------------------- |
| Relevantie       | Eerste: score / tweede: laatst gewijzigd        |
| Naam oplopend    | Nummer gevolgd door A-Z, op basis van titel     |
| Naam aflopend    | Z-A gevolgd door nummer, gebaseerd op titel     |
| Score oplopend   | Datasets beoordeeld op best gesorteerd op top   |
| Score aflopend   | Niet-beoordeelde datasets gesorteerd naar boven |
| Laatst gewijzigd | Meest recente wijzigingen in metadata           |
| Populair         | Hoogste beoordeling en weergaven bovenaan       |

:::note Opmerking

Bovenstaande lijst kan verschillen per Dataplatform-omgeving

:::

## Datasets filteren

Het filteren van datasets kan op verschillende manieren worden bereikt, met behulp van enkele of meerdere filters. Filteropties worden weergegeven aan de linkerkant van de overzichtspagina van de dataset in CKAN.

<!-- ![imageStyle: filter tree - PURPOSELY BROKEN FOR DEMO](assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_filtering.png) -->

Het is mogelijk om resultaten te filteren op basis van:

- Organisaties
- Groepen
- Tags
- Bestandsformaat
- Licenties

:::note Opmerking

Bovenstaande filters kunnen verschillen per Dataplatform-omgeving

:::

### Datasets filteren op meerdere items

Filteren kan ook met meer dan één filter.

<img class="imageStyle" alt="image: Filtering Datasets" src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_multiple.png').default} />

### Filters verwijderen

Filters kunnen één voor één uit een zoekopdracht worden verwijderd door op het kruisje achter het geselecteerde filter te klikken.

Je kunt filters verwijderen aan de linkerkant van de pagina, in het filtergebied of boven aan de pagina.

<img class="imageStyle" alt="image: Remove Filters" src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_remove.png').default} />

### Filtering datasets op de groeps-/themapagina

Het selecteren van een groep/thema werkt op dezelfde manier als filteren op organisatie in de `DATASETS` pagina.

<img class="imageStyle" alt="image: Filtering by groups" src={require('./assets/Dataplatform/FilteringDatasets/dataplatform_user_FilteringDataset_groupsthemespage.png').default} />
